# gib

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.md  install.ps1  install.sh  release-plz.toml
.github/workflows/: release-pr.yml  release.yml
src/: main.rs  output.rs  utils.rs
src/commands/: backup.rs  commit.rs  config.rs  delete.rs  encrypt.rs  log.rs  mod.rs  pending.rs  restore.rs  whoami.rs
src/commands/storage/: add.rs  list.rs  mod.rs  prune.rs  remove.rs
src/core/: crypto.rs  indexes.rs  metadata.rs  mod.rs  only.rs  permissions.rs
src/fs/: fs.rs  local.rs  mod.rs  s3.rs
src/storage_clients/: local.rs  mod.rs  s3.rs  storage_client.rs
