[package]
name = "gib"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = { version = "1.119.0", features = ["behavior-version-latest"] }
aws-types = "1.3.11"
bytes = "1.11.0"
clap = "4.5.54"
dialoguer = "0.12.0"
dirs = "6.0.0"
hex-literal = "1.1.0"
indicatif = "0.18.3"
regex = "1.12.2"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tabled = "0.20.0"
tokio = "1.49.0"
walkdir = "2.5.0"
